--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                     <option value="7">7</option>
                 </select>
             </div>
-            <button type="button" id="btnSubmit" onclick="getFormValue(this.form.posX, this.form.posY);">Submit</button>
-            <button type="button" id="btnBack" onclick="Back();">Back</button>
+            <button type="button" id="btnSubmit" onclick="getFormValue(this.form.posX, this.form.posY);">Aplikovat</button>
+            <button type="button" id="btnBack" onclick="Back();">Zpět</button>
         </form>
     </div>
 
